# otus-cpp-basic

./: .clang-format  .gitignore  .gitmodules  0.queue.cpp  00_structure.cpp  01_class.cpp  02_dangling_ref.cpp  02_methods.cpp  02_methods.hpp  03_constructor.cpp  04_destructor.cpp  04_new_delete_usage.cpp  04_raw_pointer.cpp  05_static.cpp  06_structure_nested.cpp  08_unique_ptr_example.cpp  09_dangling_ptr.cpp  0_pow_simple.cpp  1.queue_threadsafe.cpp  1.queue_threadsafe_fixed.cpp  1.queue_two_mutex.cpp  1.spaceflight-error-prone.cpp  1.spaceflight-fixed.cpp  11_fib.cpp  1_pow.cpp  2.const.cpp  2.monitor_object.cpp  3.mutable.cpp  3.waiting_queue.cpp  5.lifetime.cpp  6.inheritance.mem.cpp  6_swap.cpp  Action.cpp  Action.hpp  Ball.cpp  Ball.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Dust.cpp  (+82 more)
01_header_only/: CMakeLists.txt  main.cpp
02_linking/: CMakeLists.txt
03_make/: .gitignore  CMakeLists.txt  main.cpp
04_find_package/: CMakeLists.txt
05_FetchContent/: CMakeLists.txt
06_ExternalProject/: CMakeLists.txt  main.cpp
4.friend/: BoolArray.cpp  BoolArray.hpp  Proxy.cpp  Proxy.hpp  friend.cpp
data/: 3.KEY
dynamic_lib/: CMakeLists.txt  dynamic_lib.cpp  dynamic_lib.h
examples/: 1.condition.intro.cpp  2.condition.solution.cpp  CMakeLists.txt
examples/src/: list.hpp
examples/test/: test_assertions.cpp  test_fixtures.cpp  test_mocks.cpp  test_params.cpp
home_work/: CMakeLists.txt  home_work.cpp
inheritance/: CMakeLists.txt  main.cpp  person.h  person_example.cpp  student.h
lib/: CMakeLists.txt  lib.cpp  lib.h
lib/private/: private_lib.h
much_better/: CMakeLists.txt
much_better/include/: utils.h
much_better/src/: main.cpp  utils.cpp
much_better/tests/: utils_test.cpp
project_gtest_by_cmake_fetchcontent/: CMakeLists.txt
project_prebuilt_gtest/: CMakeLists.txt  install_prebuild_gtest.sh
project_prebuilt_gtest/test/: test_list.cpp
project_with_gtest/: CMakeLists.txt
project_with_gtest/src/: list.hpp
src/: 1_array.cpp  2_vector.cpp  3_0_list.cpp  3_1_linked_list.cpp  3_2_linked_list_itr.cpp  3_3_array_itr.cpp  3_4_arr_vec_list.cpp  4_map.cpp  5_unordered_map.cpp  6_deque.cpp  CMakeLists.txt  accumulate.cpp  any_of.cpp  binary_search.cpp  constants.h  consumer.cpp  consumer.h  copy.cpp  double_linked_list_container.h  heap.cpp  line_separator.h  main.cpp  min_max.cpp  partition.cpp  permutations.cpp  producer.cpp  producer.h  queue.h  remove.cpp  rotate.cpp  sequence_container.h  single_linked_list_container.h  sort.cpp  transform.cpp
src/1_compilation/1_include/example_0/: main.cpp
src/1_compilation/1_include/example_0/include/: include.h
src/1_compilation/1_include/example_2/: main.cpp
src/1_compilation/1_include/example_3/: main.cpp
src/1_compilation/2_compilation_assembling/: main.cpp
src/1_compilation/2_compilation_assembling/define_guard/: main.cpp  x.h  z.h
src/2_static_library/lib/: sum.cpp  sum.h
src/3_file_io/: CMakeLists.txt  file_io.cpp
src/conan_examples/format/: CMakeLists.txt
src/conan_examples/gtest/: CMakeLists.txt
src/conan_examples/gtest/src/: list.hpp
src/dynamic_library/: CMakeLists.txt  main.cpp  main_dynamic_load.cpp
src/dynamic_library/sum/: CMakeLists.txt  sum.cpp  sum.h
src/lec_15/: CMakeLists.txt  lec_15_01_string_file_ext.cpp  lec_15_02_string_api.cpp  lec_15_03_string_modify.cpp  lec_15_04_numeric_limits.cpp  lec_15_05_filesystem.cpp  lec_15_06_chrono.cpp  lec_15_07_streams.cpp  regex.cpp
src/lesson_source_code/: 01_iostream.cpp  02_string.cpp  03_vector.cpp  04_algorithm.cpp  05_map.cpp  06_fstream.cpp  07_memory.cpp  08_thread.cpp  09_lambda.cpp  10_chrono.cpp  CMakeLists.txt
src/name_mangling/: CMakeLists.txt  some_file.cpp
src/source/: CMakeLists.txt  chrono.cpp  filesystem.cpp  limits.cpp  regex.cpp  string.cpp  string_file_extension.cpp  string_modify.cpp  thread.cpp
src/static_library/: CMakeLists.txt  main.cpp
src/static_library/sum/: CMakeLists.txt  sum.cpp  sum.h
src/static_library_several_files/: CMakeLists.txt  main.cpp
src/static_library_several_files/sum/: CMakeLists.txt  sum_double.cpp  sum_double.h  sum_int.cpp  sum_int.h
src/vcpkg_examples/format/: CMakeLists.txt  format.cpp
src/vcpkg_examples/gtest/: CMakeLists.txt
sumLib/: CMakeLists.txt  sumLib.cpp  sumLib.h
test/: container_gtest.cpp  double_linked_list_tests.cpp  fake_int_class.cpp  fake_int_class.h  sequence_test.cpp  std_vector_tests.cpp  temp.cpp
