cmake_minimum_required(VERSION 3.31)
project(lesson_source_code)

set(CMAKE_CXX_STANDARD 14)

add_executable(lesson_source_code
        01_iostream.cpp
        02_string.cpp
        03_vector.cpp
        04_algorithm.cpp
        05_map.cpp
        06_fstream.cpp
        07_memory.cpp
        08_thread.cpp
        09_lambda.cpp
        10_chrono.cpp)
